# custom-greeting-app

./: %1  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.py  cosign.pub  docker-compose.yml  error_handling.py  file_utils.py  fix_db.py  functions.py  greeting_log.txt  greetings.db  greetings_log.json  greetings_log.txt  helpers.py  main.py  main.tf  manual_api_runner.py  math_tables.py  pyproject.toml  pytest.ini  requirements.txt  sbom.json  session_counts.json  test_api.py  test_functions.py  test_parse.py
.github/workflows/: security-pipeline.yml  security.yml
app/: error_handling.py  main.py
app/api/: routes.py  schemas.py
app/cli/: cli.py  main.py
app/docs/: database_setup.md
app/domain/: models.py  repositories.py  services.py
app/infrastructure/: database.py  db_repository.py  functions.py
app/security/: dependencies.py  headers.py  jwt.py  password.py
app/services/: auth_service.py
app/tests/: test_functions.py  test_services.py
custom_greeting_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
opa/: check_dockerfile.py  container_policy.rego
terraform/: .checkov.yaml  main.tf  terraform.tfstate  terraform.tfstate.backup  tfplan
tests/: conftest.py  greetings.db  test_api.py  test_auth_api.py  test_auth_service.py  test_functions.py  test_models.py  test_phase1_checkpoint.py  test_phase3_checkpoint.py  test_rate_limiting.py  test_rbac.py  test_repository.py  test_security_headers.py  test_services.py  test_user_repository.py  test_validation.py
(+16 files in other folders)
