[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-api-gateway"
version = "0.1.0"
description = "High-Performance FastAPI Architecture with Kernel-Level Runtime Protection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "sqlmodel",
    "pydantic",
    "pytest",
    "python-dotenv",
    "psycopg[binary]",
    "redis",
    "httpx",
    "slowapi",
    "python-jose[cryptography]",
    "passlib[bcrypt]"
]

[tool.setuptools.packages.find]
include = ["app*"]
